fix overscroll in bottom sheet
make it bigger so there aren't 2 scrollbars when displaying category/tag list
remove unused rule

--- a/public/scss/modules/bottom-sheet.scss
+++ b/public/scss/modules/bottom-sheet.scss
@@ -1,6 +1,7 @@
 .bottom-sheet {
 	@include media-breakpoint-down(md) {
 		.dropdown-menu {
+			overscroll-behavior: contain;
 			display: block;
 			visibility: hidden;
 
@@ -9,12 +10,12 @@
 
 			margin: 0 -1px -1px -1px;
 			padding: $spacer * 0.25 !important;
-			max-height: 60%;
+			max-height: clamp(600px, 80dvh, 90dvh);
 
 			box-shadow: 0 2px 6px rgba(0,0,0,0.35);
 			overflow: auto;
 			-webkit-overflow-scrolling: touch;
-			transform: translate3d(0, 350px, 0);
+			transform: translate3d(0, 100%, 0);
 			transition: transform 0.3s, visibility 0s 0.3s;
 			z-index: $zindex-popover;
 			padding: 5px 0 10px;
@@ -43,11 +44,6 @@
 			transition-delay: 0s;
 			top: auto;
 			width: auto;
-		}
-
-		// this does not look to be used anymore
-		.dropdown-backdrop {
-			background-color: rgba(0, 0, 0, .3);
 		}
 	}
 }
